Probably a good one now for danbooru although everything's still not that quite fixed.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,12 @@ version = "0.1.0"
 authors = ["F5XS <f5xs.0000a@gmail.com>"]
 
 [dependencies]
-curl = "*"
 reqwest = "*"
 cursive = "*"
 parking_lot = "*"
+tokio-threadpool = "*"
+serde = "1.0.78"
+serde_derive = "1.0.78"
+
+[dependencies.sekibanki]
+path = "../LICHTFANTASIE/sekibanki/"
