--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -16,7 +16,6 @@ imports_layout = "Vertical"
 merge_imports = true
 match_block_trailing_comma = true
 force_multiline_blocks = true
-normalize_comments = true
 reorder_impl_items = true
 report_todo = "Always"
 report_fixme = "Always"
@@ -44,6 +43,7 @@ edition = "Edition2018"
 # match_arm_blocks = true
 # blank_lines_upper_bound = 1
 # blank_lines_lower_bound = 0
+# normalize_comments = false
 
 
 # ---- below are stable defaults
