--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ parking_lot = "*"
 tokio-threadpool = "*"
 serde = "1.0.78"
 serde_derive = "1.0.78"
+futures = "0.1.24"
 
 [dependencies.sekibanki]
 path = "../LICHTFANTASIE/sekibanki/"
