--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -17,8 +17,6 @@ merge_imports = true
 match_block_trailing_comma = true
 force_multiline_blocks = true
 reorder_impl_items = true
-report_todo = "Always"
-report_fixme = "Always"
 space_after_colon = true
 struct_field_align_threshold = 8 # may be subject to change
 spaces_around_ranges = true
@@ -44,6 +42,8 @@ edition = "Edition2018"
 # blank_lines_upper_bound = 1
 # blank_lines_lower_bound = 0
 # normalize_comments = false
+# report_todo = "Never"
+# report_fixme = "Never"
 
 
 # ---- below are stable defaults
