--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ tokio-threadpool = "*"
 serde = "1.0.78"
 serde_derive = "1.0.78"
 futures = "0.1.24"
+openssl = { version = "0.10", features = ["vendored"] }
+chrono = "*"
 
 [dependencies.sekibanki]
 path = "../LICHTFANTASIE/sekibanki/"
